version/0.9/_sources/api/core/settings/_autosummary/api/setup_root.rst.txt
:orphan:

.. _setup_root:

setup_root
==========

.. currentmodule:: ansys.systemcoupling.core.adaptor.api_25_1.setup_root

.. autoclass:: setup_root
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================================   =============================================================================

Child                                                                                                                      Summary

==================================================   =============================================================================
:ref:`activate_hidden <activate_hidden>`                                 Contains settings to control exposure of hidden features.

:ref:`library <library>`                                 Contains objects that can be referenced from elsewhere in the data model.

:ref:`coupling_participant <coupling_participant>`                                               Configure a coupling participant.

:ref:`analysis_control <analysis_control>`                                                            Configure coupling controls.

:ref:`coupling_interface <coupling_interface>`                                                     Configure a coupling interface.

:ref:`solution_control <solution_control>`                                                            Configure solution controls.

:ref:`output_control <output_control>`                                                                  Configure output controls.

==================================================   =============================================================================

.. rubric:: Commands

==================================================================================   ==================================================================================

Command                                                                                                                                                         Summary

==================================================================================   ==================================================================================
:ref:`add_aerodamping_data_transfers <add_aerodamping_data_transfers>`                                                Adds data transfer for each specified mode shape.

:ref:`add_data_transfer <add_data_transfer>`                                                   Adds data transfer based on arguments that specify the interface, target

:ref:`add_data_transfer_by_display_names <add_data_transfer_by_display_names>`                      Important: This command is deprecated. To add an interface, use the

:ref:`add_expression_function <add_expression_function>`                                             Creates an expression function object in the data model that makes

:ref:`add_flow_boundary_data_transfers <add_flow_boundary_data_transfers>`                                     Adds group of data transfers for flow boundary coupling.

:ref:`add_fsi_data_transfers <add_fsi_data_transfers>`                                                                    Adds group of data transfers for FSI physics.

:ref:`add_interface <add_interface>`                                                              Adds an interface based on the participant and region names specified

:ref:`add_interface_by_display_names <add_interface_by_display_names>`                              Important: This command is deprecated. To add an interface, use the

:ref:`add_named_expression <add_named_expression>`                                                                 Creates a named expression object in the data model.

:ref:`add_ordered_data_transfers <add_ordered_data_transfers>`                           Adds data transfer for each ordered pair of variables in an FMU-FMU interface.

:ref:`add_participant <add_participant>`                                                      This command operates in one of two modes, depending on how it is called.

:ref:`add_reference_frame <add_reference_frame>`                                                                                 Add a reference frame to the datamodel

:ref:`add_thermal_data_transfers <add_thermal_data_transfers>`                                                        Adds group of data transfers for thermal physics.

:ref:`add_transformation <add_transformation>`                                                       Add a transformation to a reference frame defined in the datamodel

:ref:`delete_transformation <delete_transformation>`                                                                     Delete a transformation from a reference frame

:ref:`generate_input_file <generate_input_file>`                                                       Generates the input journal file for a given Fluent participant.

:ref:`get_add_data_transfer_group_commands <get_add_data_transfer_group_commands>`                       Given an interface name, returns a list with possible commands

:ref:`get_execution_command <get_execution_command>`                                               Gets the execution command needed to start the specified participant

:ref:`get_mode_shape_variables <get_mode_shape_variables>`                                    Given an interface name, returns a list of mode shape variables available

:ref:`get_region_names_for_participant <get_region_names_for_participant>`                                             Gets all of the specified participant's regions.

:ref:`get_setup_summary <get_setup_summary>`                                                                     Returns a string containing a formatted summary of the

:ref:`get_status_messages <get_status_messages>`                                              Provides information relating to the current state of the analysis setup.

:ref:`get_supported_participant_types <get_supported_participant_types>`                     Returns a list of participant types that are supported by System Coupling.

:ref:`get_thermal_data_transfer_options <get_thermal_data_transfer_options>`                  Given an interface name, returns a list of available possible options for

:ref:`has_input_file_changed <has_input_file_changed>`                                      Given the name of a participant, checks whether the input file has changed.

:ref:`import_system_coupling_input_file <import_system_coupling_input_file>`                    Reads the specified System Coupling SCI file and pushes its information

:ref:`reload_expression_function_modules <reload_expression_function_modules>`                      This may be called to force a reload of expression function modules

:ref:`update_participant <update_participant>`                                                   Given the name of a participant, updates the state of the participant.

==================================================================================   ==================================================================================

